--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
      <hr>
      <table class="responsive-table">
         <tr>
-          <th>TK<br>2009 - 2010</th>
-          <th>SD<br>2010 - 2016 </th>
-          <th>SMP<br>2016 - 2019</th>
-          <th>SMA<br>2019 - 2022</th>
+          <th>TK<br>(KUMARA BHUANA)<br>2009 - 2010</th>
+          <th>SD<br>(SDN 9 PEGUYANGAN)<br>2010 - 2016 </th>
+          <th>SMP<br>(SMP DHARMA PRAJA)<br>2016 - 2019</th>
+          <th>SMK<br>(SMK PGRI 1 DPS)<br>2019 - 2022</th>
         </tr>
         <tr>
           <td><img class="fototk" src="TK.jpg" alt="TK"></td>
@@ -104,10 +104,10 @@
       <hr>
       <table class="responsive-table">
         <tr>
-          <th>TK<br>2009 - 2010</th>
-          <th>SD<br>2010 - 2016 </th>
-          <th>SMP<br>2016 - 2019</th>
-          <th>SMA<br>2019 - 2022</th>
+          <th>TK<br>(KUMARA BHUANA)<br>2009 - 2010</th>
+          <th>SD<br>(SDN 9 PEGUYANGAN)<br>2010 - 2016 </th>
+          <th>SMP<br>(SMP DHARMA PRAJA)<br>2016 - 2019</th>
+          <th>SMK<br>(SMK PGRI 1 DPS)<br>2019 - 2022</th>
         </tr>
          <tr>
           <td><img class="fototk" src="x.jpg" alt="TK"></td>
